--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,27 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+        //jdk 8 不能使用问题----会带来乱码问题
+        jackOptions {
+            enabled true
+        }
     }
+
+    compileOptions {
+        //jdk 8对某些东西目前不支持----在defaultConfig中的jackOptions已经解决
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    dataBinding {
+        enabled = true
     }
 
     sourceSets {
